@@ -409,6 +409,9 @@ OECD Creditor Reporting System
 #table_ended_date_tip_text
 结束日期
 
+#table_planned_date_tip_text
+开始日期
+
 #list_publishers_text 
 点击探索报告此发布者的所有项目 
 
