@@ -409,6 +409,9 @@ End Date
 #table_ended_date_tip_text
 End Date
 
+#table_planned_date_tip_text
+Start Date
+
 #list_publishers_text
 Click to explore all projects reported by this publisher
 
