@@ -409,6 +409,9 @@ Date de fin
 #table_ended_date_tip_text 
 Date de fin
 
+#table_planned_date_tip_text
+Date de début
+
 #list_publishers_text 
 Cliquez pour découvrir tous les projets mentionnés par cet éditeur 
 
