@@ -409,6 +409,9 @@ OECD Creditor Reporting System
 #table_ended_date_tip_text
 समाप्त हो गया तिथि
 
+#table_planned_date_tip_text
+आरंभ करने की तिथि
+
 #list_publishers_text 
 इस प्रकाशक द्वारा रिपोर्ट सभी परियोजनाओं का पता लगाने के लिए क्लिक करें 
 
