@@ -409,6 +409,9 @@ OECDのCRSの目的コードのグループ化
 #table_ended_date_tip_text
 終了日
 
+#table_planned_date_tip_text
+開始日
+
 #list_publishers_text 
 この発行により報告されたすべてのプロジェクトを探求するクリック 
 
