@@ -409,6 +409,9 @@ Fecha final
 #table_ended_date_tip_text 
 Fecha final
 
+#table_planned_date_tip_text
+Fecha de inicio
+
 #list_publishers_text 
 Haga clic para explorar todos los proyectos notificados por este editor 
 
