@@ -228,6 +228,14 @@
     <th class="titles">{activities_spend_text}</th>
 </tr>
 
+#table_header_planned
+<tr>
+    <th class="titles"></th>
+    <th class="titles">{project_title_tip_text}</th>
+    <th class="titles">{table_planned_date_tip_text}</th>
+    <th class="titles">{activities_spend_text}</th>
+</tr>
+
 #table_header_list
 <tr>
     <th class="titles"></th>
