@@ -18,7 +18,7 @@
 	</table>
 	<div class="table_wrap">
 		<table class="activity">
-			{table_header}
+			{table_header_planned}
 			{planned_projects_datas}
 		</table>
 		<div class="download_wrap"><a download="dportal_list_activities.csv" href="{planned_projects_datas_csv}" class="csv_download">{download_csv_text}</a></div>
@@ -49,7 +49,7 @@
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
-	<td class="date" title="{table_active_date_tip_text}">{date_start}</td>
+	<td class="date" title="{table_planned_date_tip_text}">{date_start}</td>
 	<td class="value">
 		<div class="activities_spend_wrap">
 			<div class="activities_spend" title="{activities_spend_text}">{commitment}<span class="currency">{currency}</span></div>
