@@ -3,6 +3,8 @@ Development Portal (2018-12-18 shi)
 Minor css fix for search title
 Update print-friendly css
 Update Dash css sticky title headers
+Fix planned activities list header
+Updated translations for planned list header
 
 
 Development Portal (2018-09-27 shi)
